objects/Service_Mapping__c.object
<CustomObject>
    <description>Object to Capture Service Process and Resulting Service Category, Sub-Category and Type Applicable Information to Render on Cases Page</description>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <label>Business Hours</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Hours</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Channel</description>
        <inlineHelpText>Please select appropriate Channel. Selection is dependent on Service Type.</inlineHelpText>
        <label>Channel</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Complexity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Convert_To_RecordType__c</fullName>
        <description>RN - CloudSmith - If populated change the Case record type to the value in this field</description>
        <inlineHelpText>Please enter the record type Developer Name if you want the Case record type to change for this Service Type after classification</inlineHelpText>
        <label>Convert To RecordType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Manager__c</fullName>
        <label>Department Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stephen Hunter</fullName>
                </value>
                <value>
                    <fullName>Nahlah Davids</fullName>
                </value>
                <value>
                    <fullName>Andre van Niekerk</fullName>
                </value>
                <value>
                    <fullName>Lele Modise</fullName>
                </value>
                <value>
                    <fullName>Gabriella Teixeira</fullName>
                </value>
                <value>
                    <fullName>Daniel Masindi</fullName>
                </value>
                <value>
                    <fullName>Zunthia Rossouw</fullName>
                </value>
                <value>
                    <fullName>Tanya DeBeer</fullName>
                </value>
                <value>
                    <fullName>Stella Sandra Moodley</fullName>
                </value>
                <value>
                    <fullName>Nonhlanhl Sharren Ngobeni</fullName>
                </value>
                <value>
                    <fullName>Frederik Theodorus Ferreira</fullName>
                </value>
                <value>
                    <fullName>Sue Nicholson</fullName>
                </value>
                <value>
                    <fullName>Tamara Timothy</fullName>
                </value>
                <value>
                    <fullName>Daryn Britz</fullName>
                </value>
                <value>
                    <fullName>Bernadette Mckay</fullName>
                </value>
                <value>
                    <fullName>Hajira Bagus</fullName>
                </value>
                <value>
                    <fullName>Bella Wessie</fullName>
                </value>
                <value>
                    <fullName>Isabel Amoils</fullName>
                </value>
                <value>
                    <fullName>Craig Brewer</fullName>
                </value>
                <value>
                    <fullName>Melonie Fick</fullName>
                </value>
                <value>
                    <fullName>Anwar Banoo</fullName>
                </value>
                <value>
                    <fullName>Tania Tifflin</fullName>
                </value>
                <value>
                    <fullName>Melisa Willemse</fullName>
                </value>
                <value>
                    <fullName>Vanitha Moodley</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Department</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>RN : CloudSmiths
The date when this service mapping with SLA is effective from</description>
        <inlineHelpText>The date when this service mapping with SLA is effective from</inlineHelpText>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_SLA_Time_Measure__c</fullName>
        <description>RN - CloudSmiths</description>
        <label>Email SLA Time Measure</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SLA_Time_Measure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_SLA_Units__c</fullName>
        <description>RN - CloudSmiths</description>
        <label>Email SLA Units</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SLA_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Time_Measure__c</fullName>
        <description>RN - CloudSmiths - the time units for the feedback alert email to be sent for a service type</description>
        <label>Feedback Time Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SLA_Time_Measure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Units__c</fullName>
        <description>RN - CloudSmiths - Units for each client  feedback email alert</description>
        <label>Feedback Units</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SLA_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Approval__c</fullName>
        <description>First Approval</description>
        <inlineHelpText>First Approval</inlineHelpText>
        <label>First Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Team Memeber</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Escalation_Time__c</fullName>
        <label>First Escalation Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Department__c</fullName>
        <label>Full Department</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Department__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Absa Electronic Banking Helpdesk</fullName>
                </value>
                <value>
                    <fullName>Absa Electronic Banking Service Support</fullName>
                </value>
                <value>
                    <fullName>Regional Service Centre Support Corporate Cape Town</fullName>
                </value>
                <value>
                    <fullName>Regional Service Centre Commercial Cape Town</fullName>
                </value>
                <value>
                    <fullName>Trade Client Service Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Service Centre Enterprise Pretoria</fullName>
                </value>
                <value>
                    <fullName>Regional Service Centre Commercial Pretoria</fullName>
                </value>
                <value>
                    <fullName>Channel Specialist</fullName>
                </value>
                <value>
                    <fullName>Regional Service Centre Corporate Cape Town</fullName>
                </value>
                <value>
                    <fullName>Regional Service Centre Support Corporate Pretoria</fullName>
                </value>
                <value>
                    <fullName>Regional Service Centre Corporate Pretoria</fullName>
                </value>
                <value>
                    <fullName>Product On-boarding</fullName>
                </value>
                <value>
                    <fullName>Digital Ops Support</fullName>
                </value>
                <value>
                    <fullName>Botswana CCC SA</fullName>
                </value>
                <value>
                    <fullName>Payments Operations</fullName>
                </value>
                <value>
                    <fullName>Transfer Inwards</fullName>
                </value>
                <value>
                    <fullName>Structured Commodity Finance</fullName>
                </value>
                <value>
                    <fullName>Structured Trade Finance</fullName>
                </value>
                <value>
                    <fullName>RBB Cash Operations</fullName>
                </value>
                <value>
                    <fullName>Open Account - Middle Office</fullName>
                </value>
                <value>
                    <fullName>Functions Technology</fullName>
                </value>
                <value>
                    <fullName>Salesforce Africa</fullName>
                </value>
                <value>
                    <fullName>Trade Operations</fullName>
                </value>
                <value>
                    <fullName>CIB Financial Crime Compliance</fullName>
                </value>
                <value>
                    <fullName>Future clearing</fullName>
                    <label>Futures clearing</label>
                </value>
                <value>
                    <fullName>SA Migrations</fullName>
                </value>
                <value>
                    <fullName>Wholesale Client Service Centre</fullName>
                </value>
                <value>
                    <fullName>inward payments Client service and support</fullName>
                </value>
                <value>
                    <fullName>Cash Send</fullName>
                </value>
                <value>
                    <fullName>Refresh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_V_Required__c</fullName>
        <description>ID&amp;V Required</description>
        <inlineHelpText>Level of ID&amp;V Required. Dependent on Service Type.</inlineHelpText>
        <label>ID&amp;V Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Strong</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <description>RN : CloudSmiths</description>
        <inlineHelpText>Please use the Queue API name</inlineHelpText>
        <label>Queue Name (API Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <label>Queue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Queue</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_From_Email_Address__c</fullName>
        <description>RN - CloudSmiths - Org wide email address that will be used as the from address when the support process sends out email responses</description>
        <inlineHelpText>Please enter a valid Org Wide Email Address to be used as the from address on email responses from Salesforce</inlineHelpText>
        <label>Response From Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SLA_Pause_Status_Internal__c</fullName>
        <description>RN - CloudSmiths - indicates which case statuses should pause the SLA RAG indicator tracking for internal related holdups</description>
        <inlineHelpText>Add valid Case status values here, that will indicates which case statuses should pause the SLA RAG indicator tracking, per service type. These are internal delays. 
Comma separate multiple values: e.g. Closed Duplicate,Awaiting Feedback - 3rd Party</inlineHelpText>
        <label>SLA Pause Status (Internal)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Pause_Status__c</fullName>
        <description>RN - CloudSmiths - indicates which case statuses should pause the SLA RAG indicator tracking</description>
        <inlineHelpText>Add valid Case status values here, that will indicates which case statuses should pause the SLA RAG indicator tracking, per service type. 
Comma separate multiple values:  e.g. Closed Duplicate,Awaiting Feedback - Client</inlineHelpText>
        <label>SLA Pause Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Time_Measure__c</fullName>
        <label>SLA Time Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SLA_Time_Measure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA_Units__c</fullName>
        <label>SLA Units</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SLA_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <formula>TEXT( SLA_Units__c ) &amp; &quot; &quot; &amp; TEXT( SLA_Time_Measure__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Approval__c</fullName>
        <description>Second Approval</description>
        <inlineHelpText>Second Approval</inlineHelpText>
        <label>Second Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EBSH Team Member</fullName>
                </value>
                <value>
                    <fullName>EBSS Team Leader</fullName>
                </value>
                <value>
                    <fullName>EBSS Team Member</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>EBSH Team Leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Escalation_Time__c</fullName>
        <label>Second Escalation Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Category__c</fullName>
        <label>Service Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Mapping_ID_Safe__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Mapping ID (Safe)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Sub_Category__c</fullName>
        <label>Service Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service_Sub_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Email_Address__c</fullName>
        <label>Support Email Address</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Email</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Manager__c</fullName>
        <label>Team Manager</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Department__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Team_Manager</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Team</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template_Name_Case_Close__c</fullName>
        <description>RN : CloudSmiths
Email Template API name - utilized in the Case trigger</description>
        <inlineHelpText>Email Template API name</inlineHelpText>
        <label>Template Name - Case Close</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Name_Case_Creation__c</fullName>
        <description>RN : CloudSmiths
Email Template API name - utilized in the Case trigger</description>
        <inlineHelpText>Email Template API name</inlineHelpText>
        <label>Template Name - Case Creation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Name_Email_Receipt__c</fullName>
        <description>RN : CloudSmiths
Email Template API name - utilized in the Case trigger</description>
        <inlineHelpText>Email Template API name</inlineHelpText>
        <label>Template Name - Email Receipt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Name_Feedback_Email__c</fullName>
        <description>RN : CloudSmiths
Email Template API name - utilized in the Case trigger</description>
        <inlineHelpText>Please enter the email template API name for the Feedback email to be send to the client based on the feedback interval period</inlineHelpText>
        <label>Template Name - Feedback Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Service Mapping</label>
    <listViews>
        <fullName>Business_Hrs_View</fullName>
        <columns>NAME</columns>
        <columns>Queue__c</columns>
        <columns>Business_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>Complaints Client</value>
        </filters>
        <label>Business Hrs View</label>
    </listViews>
    <listViews>
        <fullName>Email_Template_View</fullName>
        <columns>NAME</columns>
        <columns>Queue__c</columns>
        <columns>Support_Email_Address__c</columns>
        <columns>Template_Name_Email_Receipt__c</columns>
        <columns>Template_Name_Case_Creation__c</columns>
        <columns>Template_Name_Case_Close__c</columns>
        <columns>Response_From_Email_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>DOS Pocketflow</value>
        </filters>
        <label>Email Template View</label>
    </listViews>
    <listViews>
        <fullName>SLA_View</fullName>
        <columns>NAME</columns>
        <columns>Queue__c</columns>
        <columns>SLA__c</columns>
        <columns>SLA_Time_Measure__c</columns>
        <columns>SLA_Units__c</columns>
        <columns>Template_Name_Case_Close__c</columns>
        <columns>Service_Type__c</columns>
        <columns>Service_Sub_Category__c</columns>
        <columns>Support_Email_Address__c</columns>
        <columns>Response_From_Email_Address__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Business_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>DOS Pocketflow</value>
        </filters>
        <label>SLA View</label>
    </listViews>
    <listViews>
        <fullName>Team_Managers</fullName>
        <columns>NAME</columns>
        <columns>Service_Type__c</columns>
        <columns>Queue__c</columns>
        <columns>Support_Email_Address__c</columns>
        <columns>Team__c</columns>
        <columns>Team_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>RSC Corp PTA PS 1</value>
        </filters>
        <label>Team Managers</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Service Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>